syntax = "proto2";
package xproto;
option go_package = ".;xproto";

// 牌组类型
enum CardHandType {
  None = 0;  // 无效牌型
  // 同花顺	Straight Flush 五张或更多的连续单牌（如： 45678 或 78910JQK ）
  StraightFlush = 1;
  // 四条 Four of a Kind：四张同点牌 + 一张
  Four = 2;
  // 葫芦
  FullHouse = 3;
  // 同花(花)	Flush
  Flush = 4;
  // 顺子(蛇)	Straight
  Straight = 5;
  // 三条 Three of a kind
  ThreeOfAKind= 6;
  // 两对牌：数值相同的两张牌
  TwoPairs = 7;
  // 对牌
  OnePair = 8;
  // 单张
  HighCard = 9;
}

// 一手牌局结束
// 可能的结果是：流局、有人赢牌
enum HandOverType {
  // 没有胡牌，或者流局
  enumHandOverType_None = 0;
  // 赢牌
  enumHandOverType_Win = 1;
  // 输牌
  enumHandOverType_Loss = 2;
}

// 动作类型
// 注意为了能够用一个int合并多个动作
// 因此所有动作的值均为二进制bit field独立
enum ActionType {
  // 无效动作
  enumActionType_None = 0;
  // 出牌
  enumActionType_DISCARD = 1;
}
